first attempt at styles for dark mode

--- a/services/frontend-service/src/assets/_base.scss
+++ b/services/frontend-service/src/assets/_base.scss
@@ -25,9 +25,18 @@ body,
     @extend .font;
 }
 
+a:link,
+a:visited,
+a:hover,
+a:focus,
+a:active {
+  color: var(--mdc-theme-anchor);
+}
+
 .app-container--v2 {
     height: 100%;
     width: 100%;
+    background-color: var(--mdc-theme-background);
     display: flex;
 }
 
