--- a/services/frontend-service/src/ui/components/SideBar/SideBar.scss
+++ b/services/frontend-service/src/ui/components/SideBar/SideBar.scss
@@ -47,7 +47,7 @@ Copyright freiheit.com*/
 .mdc-drawer-sidebar-list-item {
     border: 2px solid #f2f5f7;
     border-radius: 10px;
-    background-color: white;
+    background-color: var(--mdc-theme-background);
     padding: 5px;
     width: 100%;
     position: relative;
@@ -88,6 +88,7 @@ Copyright freiheit.com*/
     .mdc-button__label {
         font-size: $small-warn-button-font-size;
         font-weight: $small-warn-button-font-weight;
+        color: var(--mdc-theme-on-primary)
     }
     .mdc-button__ripple {
         position: relative;
