--- a/services/frontend-service/src/assets/_variables.scss
+++ b/services/frontend-service/src/assets/_variables.scss
@@ -76,7 +76,7 @@ $environment-group-lane-header-background-color: #eee;
 $environment-lane-header-padding: 13px 20px;
 $environment-lane-header-border-radius: 10px;
 $environment-lane-header-height: 62px;
-$environment-lane-background-color: var(--mdc-theme-surface, #fff);
+$environment-lane-background-color: var(--mdc-theme-surface);
 $environment-actions-right-displacement: 20px;
 $environment-actions-top-displacement: 10px;
 $environment-add-lock-button-border: 1px solid var(--mdc-theme-primary);
@@ -153,14 +153,40 @@ $warning-color-locked: #ff8c00;
     --mdc-theme-primary: #2d70d6;
     --mdc-theme-on-primary: #ffffff;
     --mdc-theme-background: #ffffff;
+    --mdc-theme-on-background: #2d70d6;
+    --mdc-theme-on-background-dark: #000000;
     --mdc-theme-surface: #f5f5f5;
-    --mdc-theme-on-surface-dark: #1c1b1bb9;
+    --mdc-theme-surface-light: #e8e8e8;
+    --mdc-theme-on-surface-dark: #2d70d6;
     --mdc-theme-on-surface: #4a4a4a;
-    --mdc-theme-on-surface-light: #8a8a8a;
+    --mdc-theme-on-surface-light: #2d70d6;
     --mdc-theme-secondary: #00afff;
     --mdc-theme-on-secondary: #ffffff;
     --mdc-theme-error: rgba(220, 0, 0, 0.92);
     --mdc-theme-warn: rgba(243, 190, 0, 0.92);
     --mdc-theme-success: rgba(80, 194, 65, 0.93);
     --mdc-filled-button-disabled-container-color: rgb(89, 89, 89);
+    --mdc-theme-anchor: #2d70d6;
+}
+
+@media(prefers-color-scheme: dark) {
+    :root {
+    --mdc-theme-primary: #073642;
+    --mdc-theme-on-primary: #ffffff;
+    --mdc-theme-on-background: #ffffff;
+    --mdc-theme-on-background-dark: #ffffff;
+    --mdc-theme-background: #002b36;
+    --mdc-theme-surface: #073642;
+    --mdc-theme-surface-light: #08323d;
+    --mdc-theme-on-surface: #839496;
+    --mdc-theme-on-surface-light: #ffffff;
+    --mdc-theme-on-surface-dark: #ffffff;
+    --mdc-theme-secondary: #002b36;
+    --mdc-theme-on-secondary: #4a4949;
+    --mdc-theme-error: #d33682;
+    --mdc-theme-warn: #b58900;
+    --mdc-theme-success: #859900;
+    --mdc-filled-button-disabled-container-color: #595959;
+    --mdc-theme-anchor: #ffffff;
+    }
 }
