--- a/services/frontend-service/src/ui/components/button/button.scss
+++ b/services/frontend-service/src/ui/components/button/button.scss
@@ -22,7 +22,7 @@ Copyright freiheit.com*/
     color: black;
 
     &.highlight {
-        background-color: white;
+        background-color: var(--mdc-theme-background);
         color: var(--mdc-theme-primary);
 
         &:focus {
@@ -40,7 +40,7 @@ Copyright freiheit.com*/
         margin-right: 10px;
         border-width: thin;
         border-radius: 12px 0 0 12px;
-        border-color: blue;
+        border-color: var(--mdc-theme-on-surface-light);
         border-style: groove;
         width: 205px;
     }
