progress on dark mode

--- a/services/frontend-service/src/ui/components/ReleaseDialog/ReleaseDialog.scss
+++ b/services/frontend-service/src/ui/components/ReleaseDialog/ReleaseDialog.scss
@@ -205,7 +205,7 @@ Copyright freiheit.com*/
     height: auto;
 }
 .env-card-header-name {
-    color: black;
+    color: var(--mdc-theme-on-surface-light);
     font-size: 17px;
 }
 
