--- a/services/frontend-service/src/ui/components/ReleaseCard/ReleaseCard.scss
+++ b/services/frontend-service/src/ui/components/ReleaseCard/ReleaseCard.scss
@@ -64,7 +64,7 @@ Copyright freiheit.com*/
     }
 }
 .mdc-card__primary-action {
-    color: var(--mdc-theme-on-surface)
+    color: var(--mdc-theme-on-surface-light)
 }
 
 .release__hash {
