--- a/services/frontend-service/src/ui/components/EnvironmentCard/EnvironmentCard.scss
+++ b/services/frontend-service/src/ui/components/EnvironmentCard/EnvironmentCard.scss
@@ -112,4 +112,12 @@ Copyright freiheit.com*/
             margin-left: 8px;
         }
     }
+
+    a:link,
+    a:visited,
+    a:hover,
+    a:focus,
+    a:active {
+      color: var(--mdc-theme-anchor-on-surface);
+    }
 }
