--- a/services/frontend-service/src/ui/components/TopAppBar/TopAppBar.scss
+++ b/services/frontend-service/src/ui/components/TopAppBar/TopAppBar.scss
@@ -62,6 +62,7 @@ Copyright freiheit.com*/
         flex: 1 1 auto;
         align-items: center;
         padding: 8px 12px;
+        color: white;
     }
     .mdc-top-app-bar__title {
         @extend .headline1;
@@ -77,7 +78,21 @@ Copyright freiheit.com*/
 
     .mdc-text-field {
         @include notched-outline.shape-radius($border-radius-medium);
-        @include notched-outline.color(var(--mdc-theme-primary));
+        .mdc-text-field__input {
+            color: white;
+        }
+        .mdc-text-field__icon--leading {
+            color: white;
+        }
+        .top-app-bar-search-field {
+            color: white;
+        }
+        .mdc-notched-outline__trailing {
+            color: white;
+        }
+        .mdc-notched-outline__leading {
+            color: white;
+        }
     }
 
     .mdc-show-button {
@@ -89,4 +104,16 @@ Copyright freiheit.com*/
         height: $sidebar-show-button-height;
         border-radius: $border-radius-medium 0 0 $border-radius-medium;
     }
+}
+
+.mdc-notched-outline {
+    .mdc-notched-outline--trailing {
+        color: white;
+    }
+    .mdc-notched-outline--leading {
+        color: white;
+    }
+}
+#application-filter-input::placeholder {
+  color: white;
 }
