--- a/services/frontend-service/src/ui/components/RolloutStatusDescription/RolloutStatusDescription.scss
+++ b/services/frontend-service/src/ui/components/RolloutStatusDescription/RolloutStatusDescription.scss
@@ -24,7 +24,7 @@ Copyright freiheit.com*/
     display: block;
     text-align: center;
     height: max-content;
-    color: var(--mdc-theme-on-surface);
+    color: var(--mdc-theme-on-surface-light);
     border-color: var(--mdc-theme-surface);
 }
 
