--- a/services/frontend-service/src/ui/components/ServiceLane/ServiceLane.scss
+++ b/services/frontend-service/src/ui/components/ServiceLane/ServiceLane.scss
@@ -56,6 +56,10 @@ Copyright freiheit.com*/
                 @extend .text-bold;
             }
         }
+        .mdc-button__ripple {
+            background: var(--mdc-theme-error);
+            position: relative;
+        }
     }
 
     .service-lane__header__error {
@@ -70,11 +74,11 @@ Copyright freiheit.com*/
 
     .service-lane__header__not_found {
         @extend .service-lane__header;
-        background: var(--mdc-theme-on-surface-light);
+        background: var(--mdc-theme-on-surface);
     }
     .service-lane__header__not_requested {
         @extend .service-lane__header;
-        background: var(--mdc-theme-on-surface-light);
+        background: var(--mdc-theme-not-requested);
     }
 
     .service__releases {
