--- a/services/frontend-service/src/assets/_variables.scss
+++ b/services/frontend-service/src/assets/_variables.scss
@@ -79,7 +79,7 @@ $environment-lane-header-height: 62px;
 $environment-lane-background-color: var(--mdc-theme-surface);
 $environment-actions-right-displacement: 20px;
 $environment-actions-top-displacement: 10px;
-$environment-add-lock-button-border: 1px solid var(--mdc-theme-primary);
+$environment-add-lock-button-border: 1px solid var(--mdc-theme-on-background-dark);
 $environment-add-lock-button-border-radius: 10px;
 $environment-add-lock-button-color: var(--mdc-theme-primary);
 $environment-buttons-column-margin: 4px;
@@ -184,10 +184,10 @@ $warning-color-locked: #ff8c00;
     --mdc-theme-on-surface-light: #ffffff;
     --mdc-theme-on-surface-dark: #ffffff;
     --mdc-theme-secondary: #002b36;
-    --mdc-theme-on-secondary: #4a4949;
+    --mdc-theme-on-secondary: #ffffff;
     --mdc-theme-error: #d33636;
     --mdc-theme-warn: #b58900;
-    --mdc-theme-success: #859900;
+    --mdc-theme-success: #3a9b00;
     --mdc-theme-not-requested: #595959;
     --mdc-filled-button-disabled-container-color: #595959;
     --mdc-theme-anchor: #ffffff;
