--- a/services/frontend-service/src/assets/_components.scss
+++ b/services/frontend-service/src/assets/_components.scss
@@ -33,6 +33,7 @@ Copyright freiheit.com*/
 @import 'src/ui/components/snackbar/snackbar';
 @import 'src/ui/Pages/CommitInfo/CommitInfoPage';
 @import 'src/ui/Pages/EslWarnings/EslWarningsPage';
+@import 'src/ui/Pages/ReleaseTrain/ReleaseTrainPage';
 @import 'src/ui/components/ServiceLane/ServiceLane';
 @import 'src/ui/components/ServiceLane/DotsMenu';
 @import 'src/ui/components/ServiceLane/Warnings';
