--- a/services/frontend-service/src/ui/components/GeneralGitSyncStatus/GeneralSyncStatus.scss
+++ b/services/frontend-service/src/ui/components/GeneralGitSyncStatus/GeneralSyncStatus.scss
@@ -36,7 +36,7 @@ Copyright freiheit.com*/
 }
 .general-status__unsynced {
     @extend .general-status;
-    background-color: var(--mdc-theme-primary);
+    background-color: #7a7a7a;
 }
 
 .general-status__error {
