--- a/services/frontend-service/src/ui/Pages/ReleaseTrain/ReleaseTrainPage.scss
+++ b/services/frontend-service/src/ui/Pages/ReleaseTrain/ReleaseTrainPage.scss
@@ -15,5 +15,5 @@ along with kuberpult. If not, see <https://directory.fsf.org/wiki/License:Expat>
 Copyright freiheit.com*/
 
 .release-train-prognosis {
-    color: var(--mdc-theme-on-background-dark)
+    color: var(--mdc-theme-on-background-dark);
 }
