--- a/services/frontend-service/src/ui/components/SideBar/SideBar.scss
+++ b/services/frontend-service/src/ui/components/SideBar/SideBar.scss
@@ -88,7 +88,7 @@ Copyright freiheit.com*/
     .mdc-button__label {
         font-size: $small-warn-button-font-size;
         font-weight: $small-warn-button-font-weight;
-        color: var(--mdc-theme-on-primary)
+        color: var(--mdc-theme-on-primary);
     }
     .mdc-button__ripple {
         position: relative;
