--- a/services/frontend-service/src/ui/components/dialog/ConfirmationDialog.scss
+++ b/services/frontend-service/src/ui/components/dialog/ConfirmationDialog.scss
@@ -43,7 +43,7 @@ Copyright freiheit.com*/
     display: grid;
     grid-template-rows: auto 1fr auto;
     background: var(--mdc-theme-surface);
-    color: var(--mdc-theme-on-surface-light);;
+    color: var(--mdc-theme-on-surface-light);
     float: left;
 
     z-index: 1000;
@@ -60,7 +60,7 @@ Copyright freiheit.com*/
     display: grid;
     grid-template-rows: auto 1fr auto;
     background: var(--mdc-theme-surface-light);
-    color: var(--mdc-theme-on-surface-light);;
+    color: var(--mdc-theme-on-surface-light);
     position: fixed;
     float: left;
     left: 50%;
