--- a/services/frontend-service/src/assets/_variables.scss
+++ b/services/frontend-service/src/assets/_variables.scss
@@ -161,6 +161,7 @@ $warning-color-locked: #ff8c00;
     --mdc-theme-on-surface: #4a4a4a;
     --mdc-theme-on-surface-light: #4a4a4a;
     --mdc-theme-secondary: #00afff;
+    --mdc-theme-secondary-light: #2d70d6;
     --mdc-theme-on-secondary: #ffffff;
     --mdc-theme-error: rgba(220, 0, 0, 0.92);
     --mdc-theme-warn: rgba(243, 190, 0, 0.92);
@@ -183,7 +184,8 @@ $warning-color-locked: #ff8c00;
         --mdc-theme-on-surface: #839496;
         --mdc-theme-on-surface-light: #ffffff;
         --mdc-theme-on-surface-dark: #ffffff;
-        --mdc-theme-secondary: #002b36;
+        --mdc-theme-secondary: #0094ba;
+        --mdc-theme-secondary-light: #0094ba;
         --mdc-theme-on-secondary: #ffffff;
         --mdc-theme-error: #d33636;
         --mdc-theme-warn: #b58900;
