feat(UI): Kuberpult Dark Mode (#2315)
![Screenshot 2025-03-31 at 15 25
59](https://github.com/user-attachments/assets/8e86fa1e-e836-4ef1-9161-6652e06aa1e9)

![Screenshot 2025-03-25 at 18 46
57](https://github.com/user-attachments/assets/76721f45-08e5-434c-a52c-8ed9bcac1825)
![Screenshot 2025-03-25 at 18 47
02](https://github.com/user-attachments/assets/d85323ba-8c6e-4b0d-a992-027207551c86)
![Screenshot 2025-03-31 at 15 28
00](https://github.com/user-attachments/assets/859d5f04-20a6-4f5d-a1ee-e848150ec0f4)



Ref: SRX-VP9X20

--- a/services/frontend-service/src/ui/components/GeneralGitSyncStatus/GeneralSyncStatus.scss
+++ b/services/frontend-service/src/ui/components/GeneralGitSyncStatus/GeneralSyncStatus.scss
@@ -36,7 +36,8 @@ Copyright freiheit.com*/
 }
 .general-status__unsynced {
     @extend .general-status;
-    background-color: var(--mdc-theme-primary);
+    background-color: var(--mdc-theme-secondary-light);
+    border-color: var(--mdc-theme-secondary-light);
 }
 
 .general-status__error {
