--- a/services/frontend-service/src/ui/components/LockDisplay/LockDisplay.scss
+++ b/services/frontend-service/src/ui/components/LockDisplay/LockDisplay.scss
@@ -35,6 +35,7 @@ Copyright freiheit.com*/
 .lock-display-info {
     flex: 1;
     text-align: center;
+    color: var(--mdc-theme-on-surface-light);
 }
 
 .lock-display-info-size-limit {
