--- a/services/frontend-service/src/assets/_base.scss
+++ b/services/frontend-service/src/assets/_base.scss
@@ -28,6 +28,7 @@ body,
 .app-container--v2 {
     height: 100%;
     width: 100%;
+    background-color: var(--mdc-theme-background);
     display: flex;
 }
 
