--- a/services/frontend-service/src/ui/components/EnvironmentCard/EnvironmentCard.scss
+++ b/services/frontend-service/src/ui/components/EnvironmentCard/EnvironmentCard.scss
@@ -50,7 +50,7 @@ Copyright freiheit.com*/
 
     .environment-lane {
         position: relative;
-        background-color: #eee;
+        background-color: var(--mdc-theme-surface-light);
         border-radius: $environment-lane-border-radius;
         margin: $environment-lane-margin;
         overflow: visible;
@@ -98,16 +98,26 @@ Copyright freiheit.com*/
         .environment-action {
             border: $environment-add-lock-button-border;
             border-radius: $environment-add-lock-button-border-radius;
+            border-color: var(--mdc-theme-on-surface-light);
             color: $environment-add-lock-button-color;
             margin: $environment-buttons-column-margin;
             .mdc-button__label {
                 padding-left: $environment-add-lock-button-padding-left;
                 @extend .text-bold;
+                color: var(--mdc-theme-on-surface-dark);
             }
         }
         .environment-link {
             display: inline-block;
             margin-left: 8px;
         }
+    }
+
+    a:link,
+    a:visited,
+    a:hover,
+    a:focus,
+    a:active {
+        color: var(--mdc-theme-anchor-on-surface);
     }
 }
