--- a/services/frontend-service/src/ui/components/ReleaseDialog/ReleaseDialog.scss
+++ b/services/frontend-service/src/ui/components/ReleaseDialog/ReleaseDialog.scss
@@ -205,7 +205,7 @@ Copyright freiheit.com*/
     height: auto;
 }
 .env-card-header-name {
-    color: black;
+    color: var(--mdc-theme-on-surface-light);
     font-size: 17px;
 }
 
@@ -227,7 +227,7 @@ button.mdc-button.env-card-deploy-btn {
 button.mdc-button.env-card-lock-btn {
     border-radius: $release-dialog-inner-border-radius;
     @extend .text-bold;
-
+    color: var(--mdc-theme-on-surface-light);
     &.deploy-button-cancel:not(.button-main) {
         color: var(--mdc-theme-error);
     }
@@ -241,6 +241,7 @@ button.mdc-button.env-card-lock-btn {
     border-radius: $environment-lane-header-border-radius;
     margin-top: 10px;
     margin-bottom: 10px;
+    color: var(--mdc-theme-on-background-dark);
 
     .release-dialog-environment-group-lane__footer {
         padding-bottom: 1px; // must not be 0, or margins will collapse
