--- a/services/frontend-service/src/ui/components/Releases/Releases.scss
+++ b/services/frontend-service/src/ui/components/Releases/Releases.scss
@@ -18,6 +18,14 @@ Copyright freiheit.com*/
     position: relative;
     max-width: 1200px;
     margin: 0 auto;
+    color: var(--mdc-theme-on-surface-light);
+    a:link,
+    a:visited,
+    a:hover,
+    a:focus,
+    a:active {
+        color: var(--mdc-theme-anchor-on-surface-light);
+    }
 }
 
 /* Container around content */
@@ -51,7 +59,7 @@ Copyright freiheit.com*/
 /* The actual content */
 .content {
     padding: 20px 30px;
-    background-color: white;
+    background-color: var(--mdc-theme-background);
     position: relative;
     border-radius: 6px;
     width: 920px;
@@ -63,11 +71,6 @@ Copyright freiheit.com*/
     line-height: 48px;
     padding-left: 35px;
     align-items: center;
-    color: var(--mdc-theme-primary);
-}
-
-.release_date {
-    color: var(--mdc-theme-primary);
 }
 
 .app-locks-container {
