--- a/services/frontend-service/src/ui/components/RolloutStatusDescription/RolloutStatusDescription.scss
+++ b/services/frontend-service/src/ui/components/RolloutStatusDescription/RolloutStatusDescription.scss
@@ -24,28 +24,27 @@ Copyright freiheit.com*/
     display: block;
     text-align: center;
     height: max-content;
+    color: var(--mdc-theme-on-surface-light);
+    border-color: var(--mdc-theme-surface);
 }
 
 .rollout__description_unknown {
     @extend .rollout__description;
-    background-color: var(--mdc-theme-on-surface);
-    color: var(--mdc-theme-surface);
-    border-color: var(--mdc-theme-surface);
+    background-color: var(--mdc-theme-surface);
+    background-color: var(--mdc-theme-surface);
 }
 
 .rollout__description_successful {
     @extend .rollout__description;
     background-color: var(--mdc-theme-surface);
-    color: var(--mdc-theme-on-surface);
-    border-color: var(--mdc-theme-on-secondary);
+    border-color: var(--mdc-theme-surface);
 }
 
 .rollout__description_error,
 .rollout__description_unhealthy {
     @extend .rollout__description;
     background-color: var(--mdc-theme-error);
-    color: var(--mdc-theme-on-secondary);
-    border-color: var(--mdc-theme-on-secondary);
+    border-color: var(--mdc-theme-error);
 }
 
 .rollout__description_progressing,
@@ -53,5 +52,5 @@ Copyright freiheit.com*/
     @extend .rollout__description;
     background-color: var(--mdc-theme-secondary);
     color: var(--mdc-theme-on-secondary);
-    border-color: var(--mdc-theme-on-secondary);
+    border-color: var(--mdc-theme-secondary);
 }
