--- a/services/frontend-service/src/ui/components/TopAppBar/TopAppBar.scss
+++ b/services/frontend-service/src/ui/components/TopAppBar/TopAppBar.scss
@@ -18,7 +18,7 @@ Copyright freiheit.com*/
 
 .mdc-top-app-bar {
     background: var(--mdc-theme-background);
-    color: var(--mdc-theme-primary);
+    color: var(--mdc-theme-on-background);
     padding: $top-app-bar-padding;
     position: fixed;
     width: 100%;
@@ -62,6 +62,7 @@ Copyright freiheit.com*/
         flex: 1 1 auto;
         align-items: center;
         padding: 8px 12px;
+        color: white;
     }
     .mdc-top-app-bar__title {
         @extend .headline1;
@@ -72,11 +73,29 @@ Copyright freiheit.com*/
         white-space: nowrap;
         overflow: hidden;
         letter-spacing: 0.0125em;
+        color: var(--mdc-theme-on-background);
     }
 
     .mdc-text-field {
         @include notched-outline.shape-radius($border-radius-medium);
-        @include notched-outline.color(var(--mdc-theme-primary));
+        .mdc-text-field__input {
+            caret-color: var(--mdc-theme-on-surface-light);
+            color: var(--mdc-theme-on-background-dark);
+        }
+        .mdc-text-field__icon--leading {
+            color: var(--mdc-theme-on-surface-light);
+        }
+        .top-app-bar-search-field {
+            color: var(--mdc-theme-on-surface-light);
+        }
+        .mdc-notched-outline__trailing {
+            border-color: var(--mdc-theme-on-background-dark);
+            color: var(--mdc-theme-on-surface-light);
+        }
+        .mdc-notched-outline__leading {
+            border-color: var(--mdc-theme-on-background-dark);
+            color: var(--mdc-theme-on-surface-light);
+        }
     }
 
     .mdc-show-button {
@@ -88,4 +107,16 @@ Copyright freiheit.com*/
         height: $sidebar-show-button-height;
         border-radius: $border-radius-medium 0 0 $border-radius-medium;
     }
+
+    a:link,
+    a:visited,
+    a:hover,
+    a:focus,
+    a:active {
+        color: var(--mdc-theme-anchor-on-surface-light);
+    }
+}
+
+#application-filter-input::placeholder {
+    color: var(--mdc-theme-on-surface-light);
 }
