--- a/services/frontend-service/src/ui/components/tooltip/tooltip.scss
+++ b/services/frontend-service/src/ui/components/tooltip/tooltip.scss
@@ -17,8 +17,8 @@ Copyright freiheit.com*/
 
 #kuberpult-tooltip {
     z-index: 1000;
-    background-color: white;
-    color: black;
+    background-color: var(--mdc-theme-surface);
+    color: var(--mdc-theme-on-surface-light);
     font-size: 14px;
     border-radius: 8px;
     .release__hash--container {
