--- a/services/frontend-service/src/assets/_components.scss
+++ b/services/frontend-service/src/assets/_components.scss
@@ -34,6 +34,7 @@ Copyright freiheit.com*/
 @import 'src/ui/Pages/CommitInfo/CommitInfoPage';
 @import 'src/ui/Pages/EslWarnings/EslWarningsPage';
 @import 'src/ui/Pages/ReleaseTrain/ReleaseTrainPage';
+@import 'src/ui/Pages/Manifests/ManifestsPage';
 @import 'src/ui/components/ServiceLane/ServiceLane';
 @import 'src/ui/components/ServiceLane/DotsMenu';
 @import 'src/ui/components/ServiceLane/Warnings';
