feat(ui): add lock lifetime field when creating locks in the ui
Ref: SRX-Z83DGU

--- a/services/frontend-service/src/ui/components/SideBar/SideBar.scss
+++ b/services/frontend-service/src/ui/components/SideBar/SideBar.scss
@@ -36,6 +36,10 @@ Copyright freiheit.com*/
     }
 }
 
+.mdc-text-field-tooltip {
+    padding: 0;
+}
+
 .mdc-drawer-sidebar-list {
     margin: 5px;
     display: flex;
