fix(ui): show warning for locks that their lifetime is passed
Ref: SRX-I92DTP

--- a/services/frontend-service/src/ui/components/EnvironmentLockDisplay/EnvironmentLockDisplay.scss
+++ b/services/frontend-service/src/ui/components/EnvironmentLockDisplay/EnvironmentLockDisplay.scss
@@ -24,3 +24,7 @@ Copyright freiheit.com*/
 .environment-lock-icon {
     transform: $environment-lock-scale;
 }
+
+.lock-warning-text {
+    color: red;
+}
