fix(ui): visualize errors in product summary
This shows errors in their own box,
instead of just using snack-bar display,
which is always fleeting

Ref: SRX-2Z82NU

--- a/services/frontend-service/src/ui/components/ProductVersion/ProductVersion.scss
+++ b/services/frontend-service/src/ui/components/ProductVersion/ProductVersion.scss
@@ -100,3 +100,14 @@ Copyright freiheit.com*/
     background-color: var(--mdc-theme-primary);
     color: white;
 }
+
+.warning-container {
+    background-color: $warning-color;
+    border-radius: 4px;
+}
+.warning-message {
+    text-align: center;
+    line-height: 3em;
+    font-size: large;
+    color: darkred;
+}
