fix: Emphasize the version number in history page
Ref: SRX-ON2WF2

--- a/services/frontend-service/src/ui/components/Releases/Releases.scss
+++ b/services/frontend-service/src/ui/components/Releases/Releases.scss
@@ -34,7 +34,6 @@ Copyright freiheit.com*/
     position: relative;
     background-color: inherit;
     width: 50%;
-    background: linear-gradient(var(--mdc-theme-primary), var(--mdc-theme-primary)) left 9px top 19px/2px 100% no-repeat;
     margin-bottom: -2px;
 }
 /* Add arrows to the right container (pointing left) */
@@ -79,4 +78,9 @@ Copyright freiheit.com*/
     gap: 1px;
     margin-left: 30px;
     justify-items: start;
+}
+
+.release_version {
+    font-weight: 700;
+    font-size: 18px;
 }
