--- a/services/frontend-service/src/ui/components/dialog/EnvDelDialog.scss
+++ b/services/frontend-service/src/ui/components/dialog/EnvDelDialog.scss
@@ -14,31 +14,7 @@ along with kuberpult. If not, see <https://directory.fsf.org/wiki/License:Expat>
 
 Copyright freiheit.com*/
 
-.env-del-dialog-container {
-    display: flex;
-}
-
-.env-del-dialog-container {
-    display: flex;
-    position: relative;
-}
-
-
-.env-del-dialog-container-open {
-    &::before {
-        // this is to make everything behind the dialog grey and not clickable:
-        content: '';
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        z-index: 999;
-        background-color: #00000050;
-    }
-}
-
-.env-del-dialog-open {
+.env-del-dialog {
     max-height: 80vh;
     display: grid;
     grid-template-rows: auto 1fr auto;
