--- a/services/frontend-service/src/assets/_components.scss
+++ b/services/frontend-service/src/assets/_components.scss
@@ -16,6 +16,7 @@ Copyright freiheit.com*/
 // Import css for all components
 @import 'src/ui/components/button/button';
 @import 'src/ui/components/dialog/ConfirmationDialog';
+@import 'src/ui/components/dialog/EnvDelDialog';
 @import 'src/ui/components/chip/chip';
 @import 'src/ui/components/textfield/textfield';
 @import 'src/ui/components/dropdown/dropdown';
@@ -52,6 +53,7 @@ Copyright freiheit.com*/
 @import 'src/ui/components/EslWarnings/EslWarnings';
 @import 'src/ui/components/Compliance/Compliance';
 @import 'src/ui/components/ProgressBar/ProgressBar';
+@import 'src/ui/components/dialog/EnvDelDialog';
 @import '../ui/components/GeneralGitSyncStatus/GeneralSyncStatus';
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 @import url('https://fonts.googleapis.com/icon?family=Inter');
