--- a/services/frontend-service/src/ui/components/Compliance/Compliance.scss
+++ b/services/frontend-service/src/ui/components/Compliance/Compliance.scss
@@ -17,3 +17,7 @@ Copyright freiheit.com*/
     margin-right: 20px;
     margin-bottom: 20px;
 }
+
+.compliance-content {
+  color: var(--mdc-theme-on-background);
+}
