--- a/services/frontend-service/src/ui/components/ProductVersion/ProductVersion.scss
+++ b/services/frontend-service/src/ui/components/ProductVersion/ProductVersion.scss
@@ -20,6 +20,7 @@ Copyright freiheit.com*/
     position: relative;
     max-width: 1200px;
     margin: 0 auto;
+    color: var(--mdc-theme-on-background-dark);
 }
 
 .environment_name {
