fix: update anchor colors for commit history and product version pages
Ref: SRX-M4KA9L

--- a/services/frontend-service/src/ui/components/CommitInfo/CommitInfo.scss
+++ b/services/frontend-service/src/ui/components/CommitInfo/CommitInfo.scss
@@ -72,4 +72,8 @@ Copyright freiheit.com*/
         margin-bottom: 10px;
     }
     color: var(--mdc-theme-on-background-dark);
+
+    a {
+        color: var(--mdc-theme-anchor-on-surface);
+    }
 }
